# GCRDoseEvaluation

./: CMakeLists.txt  MyCustomPhysicsList.cc  MyCustomPhysicsList.hh  MyDetectorConstruction.cc  MyDetectorConstruction.hh  MyPrimaryGeneratorAction.cc  MyPrimaryGeneratorAction.hh  MySensitiveDetector.cc  MySensitiveDetector.hh  run.mac  vis.mac
